--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:overScrollMode="never"
+    android:scrollbars="none">
 
     <!-- Simple App Bar -->
     <LinearLayout
+        android:id="@+id/appBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@color/dark_gray"
@@ -45,17 +48,7 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/appBar"
         android:padding="5dp" />
 
-    <!-- Simple Add Button -->
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/addButton"
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:layout_margin="15dp"
-        android:backgroundTint="@color/neon_blue"
-        android:text="➕ ADD NEW CAR"
-        android:textColor="@color/black"
-        android:textStyle="bold" />
-
-</LinearLayout>
+</RelativeLayout>
